--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.26",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.7",
     "bloomer": "^0.6.5",
     "bulma": "^0.8.0",
+    "bulma-switch": "^2.0.0",
+    "bulma-tooltip": "^3.0.2",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
