--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL = http://localhost:8000/graphql
+REACT_APP_API_URL = https://employee-competency-graphql.herokuapp.com/graphql
+REACT_APP_API_URL2 = http://localhost:8000/graphql
